Fix main container breaking on small widths
not sure why it would set its width to 0 at certains widths, set the width to 100 viewport width so it should always be 100% width.

--- a/css/panel.css
+++ b/css/panel.css
@@ -134,7 +134,7 @@ form label {
 
 .mainTabsContent {
     position: relative; /* required for .tab-pane absolute positioning */
-
+    width: 100vw;
     margin-top: 40px; /* Push the content down so it's visible */
 }
 
@@ -210,6 +210,14 @@ form label {
     #appTitleTab {
         display: none;
     }
+}
+
+@media (max-width: 500px) {
+
+    .tabs-left>.nav-tabs>li>a, .tabs-right>.nav-tabs>li>a {
+        min-width: initial;
+    }
+
 }
 
 .icon-chevron-bottom {
